infra/k8s/car-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      labels:
        app: car
    spec:
      containers:
        - name: car
          image: ssibrahimbas.com/persistent-mongo/car
