infra/k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-sfs
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo-sfs
          volumeMounts:
            - name: mongo-pvc
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
        annotations:
          volume.beta.kubernetes.io/storage-class: fast-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
