infra/k8s/car-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: car
  ports:
    - port: 3005
      targetPort: 3005
