infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "ssi-persistent.mongo"
      http:
        paths:
          - path: /api/cars/?(.*)
            pathType: Prefix
            backend:
              service:
                name: car-cluster-ip-service
                port:
                  number: 3005
